--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,38 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html {
+  height: 100vh;
+  background-color: aliceblue;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  font-family: 'Ubuntu';
+}
+
+.body {
+   display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 30px;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+}
+
+
+.book {
+  flex: 1;
+  min-width: 300px;
+  max-width: 300px;
+  background-color: white;
+  border-radius: 30px;
+  box-shadow: 1px 2px #8888882e;
 }
