--- a/src/index.css
+++ b/src/index.css
@@ -118,3 +118,16 @@ code {
     border-radius: 20px;
       box-shadow: 1px 2px #8888882e;
 }
+
+.bookAction {
+  display: flex;
+    flex-direction: row;
+}
+
+.bookActionDelete {
+      outline: none;
+    background-color: #ff4c4c;
+    padding: 3px 9px;
+    border: 0px;
+    border-radius: 20px;
+}
