--- a/src/index.css
+++ b/src/index.css
@@ -102,7 +102,8 @@ code {
 
 .bookItem {
   flex: 1;
-  flex-grow: initial;
+  /* flex-grow: initial; */
+      margin-top: 20px;
 }
 
 
@@ -130,4 +131,22 @@ code {
     padding: 3px 9px;
     border: 0px;
     border-radius: 20px;
+}
+
+.bookActionEdit {
+      outline: none;
+    background-color: #47b6ff;
+    padding: 3px 9px;
+    border: 0px;
+    border-radius: 20px;
+}
+
+
+.editBookInput {
+      border: 1px solid #8080806b;
+    border-radius: 20px;
+    padding: 12px;
+    flex: 1 1;
+    width: 250px;
+    outline: none;
 }
